--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+/* Pallete of color vars */
+
+
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +10,28 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+html{
+  box-sizing: content-box;
+}
+
+button{
+  cursor: pointer;
+  border: none;
+}
+h1,h2,h3,h4,h5,h6{
+  color: rgb(29, 31, 58);
+}
+::before::after{
+  content: inherit;
+}
+images{
+  object-fit: cover;
 }
 
 code {
